--- a/src/articles/2022-03-14.md
+++ b/src/articles/2022-03-14.md
@@ -1,5 +1,5 @@
 ---
-title: Lundi
+title: Lundi 14 Mars
 description: Journal de bord
 date: 2022-03-14
 layout: article.pug
@@ -7,7 +7,17 @@ tags:
   - articles
 
 ---
+### Matin:
+* Graphisme
+-Daily: réunion commençant la journée avec les différents projets à effectuer pour la journée.
+-Découverte de Sketch, Zeplin, Invision, Trello [Apprendre à utiliser Sketch](https://youtu.be/ilcwjXTqyNM)
+-Démarche de réalisation du projet (site à utiliser, etc…)
+-Première réalisation avec Sketch: fond d’écran
 
-# matin
 
-# après-midi
+### Après-midi:
+* Codage
+Markdown: langage de codage   
+Syntaxe markdown: comment mettre des mots en italique, en gras, mettre des liens,…
+Atom: logiciel de codage
+Continuation du projet de codage remplissage du site des méthodes apprises…
