--- a/src/articles/2022-03-14.md
+++ b/src/articles/2022-03-14.md
@@ -1,5 +1,5 @@
 ---
-title: Lundi 14 Mars
+title: Lundi 14 mars
 description: Journal de bord
 date: 2022-03-14
 layout: article.pug
@@ -8,16 +8,26 @@ tags:
 
 ---
 ### Matin:
-* Graphisme
--Daily: réunion commençant la journée avec les différents projets à effectuer pour la journée.
--Découverte de Sketch, Zeplin, Invision, Trello [Apprendre à utiliser Sketch](https://youtu.be/ilcwjXTqyNM)
--Démarche de réalisation du projet (site à utiliser, etc…)
--Première réalisation avec Sketch: fond d’écran
+* Design:
 
+Daily (juste les UI: User Interface en anglais): réunion commençant la journée avec les différents projets à effectuer pour la journée.
+
+Découverte de Sketch, Zeplin, Invision, Trello (Voir la partie "Les différentes applications utilisés")
+
+Pour mon stage, on m'a proposer de le faire sous forme de site web: le lundi on m'explique en comment faire un site: il faut utilisés des logiciels fait pour cela, c'est-à-dire Sketch, Atom, GitHub,...
+
+Première réalisation avec Sketch: fond d’écran
+
+![Fond d'écran sur Sketch](/assets/Fonddecransketch.jpeg)
+![Fond d'écran sous forme mobile](/assets/Fonddecran.jpeg)
 
 ### Après-midi:
-* Codage
-Markdown: langage de codage   
-Syntaxe markdown: comment mettre des mots en italique, en gras, mettre des liens,…
-Atom: logiciel de codage
-Continuation du projet de codage remplissage du site des méthodes apprises…
+
+* Code:
+
+On m'apprend les bases du Markdown: langage de code (Voir la partie "métier de développeur")
+
+Syntaxe markdown: comment mettre des mots en italique, en gras, mettre des liens,… (Voir la partie "métier de développeur")
+
+On m'apprend aussi à utiliser Atom: logiciel de codage (Voir la partie "Les différentes applications utilisés")
+Début du projet de site: remplissage du site des méthodes apprises…
