--- a/src/articles/2022-03-16.md
+++ b/src/articles/2022-03-16.md
@@ -1,5 +1,5 @@
 ---
-title: Mercredi 16 Mars
+title: Mercredi 16 mars
 description: Journal de bord
 date: 2022-03-14
 layout: article.pug
@@ -7,35 +7,50 @@ tags:
   - articles
 
 ---
+Direction Paris: les bureaux de BNP Paribas (BNPP).
 
-Direction Paris bureau de la BNPP
+![Bureau de BNP Paribas](/assets/devantbnp.jpg)phtographie devant le bureau BNP Paribas.
 
 ### Matin:
-Tour de chaque personne pour savoir leur programme de leur journée et ce qui c’est passé pendant leur semaine
-<!-- standup / daily qu'est-ce c'est? pourquoi? -->
-Regarder les différents projets des UI, design de site,….
+Le Daily bureau (avectoute l'équipe) : faire le tour de chaque personne pour savoir leur programme de leur journée et ce qui c’est passé pendant leur semaine.
+
+J'ai regardé les différents projets des UI designer, comment ils utilisaient Sketch et ils me donnaient des petites astuces et des conseils sur la façon de designer et d'utiliser Sketch.
+
+![buraeux bnp](/assets/domi.jpeg) Photographie des bureaux où travaillent les UI designer.
 
 ### Après-midi:
-Explication de ce que c’est un UX par un UX.
-<!-- vazi-->
-Réunion présentation de projet finalisé (POVA:  point de validation des wireframes et des maquettes)
+- Un UX m'explique ce qu'est un UX designer. Il y a différents étapes avant que l'interface soit opérationnel:
 
-<!-- pourquoi on fait un POVA quels projets? parcours succession c'est quoi un parcours -->
-Très bonne ambiance d’équipe
-(photo?)
+![Dfférentes Étapes](/assets/flow-ui-dev.jpeg) Les différents étapes avant que l'interface soit opérationnels.  
 
-**différentes technos**
-Native: composants propre à une appli ou un téléphone,…
-codé spécifiquement pour l'appli en SWIF (iOS) en Kotlin pour Android
-Webview: web dans du mobile
-un bout de site web qui s'affiche dans une application, on a l'impression d'etre sur l'app mais en fait on est sur du web
+L'UX s'occupe donc de la partie "wireframe" c'est-à-dire de placer les éléments dans l'interface. Son but est de rendre le parcours agréable et utilisable pour le client. Il prend en compte les besoins de l'utilisateur et les traduit dans l'interface.
+
+![wireframemaquette](/assets/maquettewireframe.jpg) Photographie d'un wireframe (UX) et d'une maquette (UI).
+
+- Réunion présentation de projet finalisé (POVA:point de validation des wireframes et des maquettes):
+Les POVA permettent de validés la maquette  ou le wireframes pour pouvoir passer à l'étapes suivantes, pour le wireframe c'est de pouvoir être mis en couleur, de rajouter les photos, les logos,... et pour les maquettes (les wireframes en couleur) de pouvoir être codé par les développeurs.
+
+![réunion POVA](/assets/reunionPOVA.jpeg) Photographie d'une réunion POVA.
+
+
+* Le Vocabulaire peut être quelque fois un peu compliqué à comprendre dans le milieu de l'Informatique:
+
+- Native: composants propre à une appli ou un téléphone,… codé spécifiquement pour l'appli en SWIFT pour IOS ou en Kotlin pour Android
+
+- Webview: c'est un bout de site web qui s'affiche dans une application, nous avons l'impression d'être sur l'application mais en réalité nous sommes sur le web. Pourquoi fait-on cela? Puisque c'est plus simple: il n'y a pas besoin de le faire trois fois (1 web, 1 SWIFT pour IOS et 1 Kotlin pour Android) mais il y a des inconvénients: le chargement est plus long en webview que par exemple en SWIFT (pour IOS) et cela est moins joli puisque c'est le même design pour IOS et Android.
+
+- Hub: c'est une page qui redirige vers pleins d’autres pages (une sorte de carrefour).
+
+
 <!-- pourquoi? parce que c'est plus simple
-* on le fait une seule fois au lieu de 3 fois (1 web + 1 swift + 1 kotlin)
+* on le fait une seule fois au lieu de 3 fois (1 web + 1 SWIFT + 1 kotlin)
 * on est des feignasses à la BNP
 inconvénient
 * c'est plus lent
 * comme c'est le même design pour ios et android, c'est moins joli
 * on peut faire moins de trucs -->
-Hub: page qui redirige vers plein d’autres pages (sorte de carrefour)
-Wireframe: photo
-Wireframe fini par un UI: photo
+<!-- parcours succession c'est quoi un parcours -->
+<!-- vazi-->
+<!-- (photo?) -->
+<!-- photo provisoire -->
+<!-- standup / daily  pourquoi? -->
