--- a/src/articles/2022-03-17.md
+++ b/src/articles/2022-03-17.md
@@ -6,11 +6,21 @@ tags:
   - articles
 
 ---
-### Matin: 
-bossé sur le rapport (Atom,Sketch,...)
+### Matin:
+- Finalisation du projet de site avec les logiciels Atom, Sketch,... et création d'un logo sur Sketch.
+
+![logosite](/assets/logosite.jpeg)
 
 ### Après-midi:
-Découverte de **github**
+- Découverte de **Github** (description dans la partie "Les différents logiciels et applications utilisés").
+- Vidéo youtube proposée pour utiliser Github: [Utiliser Github](https://www.youtube.com/watch?v=V6Zo68uQPqE)
+
+
+
+
+
+
+
 <!-- Écrire ce que c’est github
 
 * Créer un compte sur GitHub
@@ -18,6 +28,3 @@ Découverte de **github**
 * Créer un dossier « website » sur le bureau
 * Créer un fichier « readme.md » qui contient le texte « hello » dans le dossier website
 Faire un commit pour envoyer le fichier sur github (voir doc sur GitHub) -->
-
- **surge** pour publier (si on a le temps)
- **18 mars 2022**
