--- a/src/articles/2022-03-18.md
+++ b/src/articles/2022-03-18.md
@@ -7,4 +7,4 @@ tags:
 
 ---
 ### Matin et Après-midi:
-Dernière ligne droite pour le site. finalisation du design (couleur a prendre, contraste, taille du texte,...)
+Dernière ligne droite pour le site, finalisation du design (les couleurs à choisir, le contraste, la taille du texte,...)
