--- a/src/articles/2022-03-14.md
+++ b/src/articles/2022-03-14.md
@@ -8,26 +8,29 @@ tags:
 
 ---
 ### Matin:
-* Design:
 
-Daily (juste les UI: User Interface en anglais): réunion commençant la journée avec les différents projets à effectuer pour la journée.
+**Design:**
 
-Découverte de Sketch, Zeplin, Invision, Trello (Voir la partie "Les différentes applications utilisés")
+Daily: Le Daily est une réunion que pour les UI (User Interface en anglais), cette réunion en visioconférence commence la journée, elle sert à parler des différents projets à effectuer ou à avancer pendant la journée.
 
-Pour mon stage, on m'a proposer de le faire sous forme de site web: le lundi on m'explique en comment faire un site: il faut utilisés des logiciels fait pour cela, c'est-à-dire Sketch, Atom, GitHub,...
+![Daily](/assets/dailyui.jpeg) *Daily avec toute l'équipe UI*
 
-Première réalisation avec Sketch: fond d’écran
+Pour mon stage, on m'a proposer de faire mon rapport sous forme de site web: aujourd'hui, on m'explique en comment faire un site: il faut utilisés des logiciels fait pour cela, c'est-à-dire Sketch, Atom, GitHub,...
 
-![Fond d'écran sur Sketch](/assets/Fonddecransketch.jpeg)
-![Fond d'écran sous forme mobile](/assets/Fonddecran.jpeg)
+J'ai découvert des logiciels de deigne Sketch, Zeplin, Invision, Trello (Voir la partie "Les différentes applications utilisés")
+
+ J'apprends à utiliser Sketch ([Apprendre à utiliser Sketch](https://youtu.be/ilcwjXTqyNM)) et je fais ma première réalisation avec Sketch, c'est un fond d’écran.
+
+![Fond d'écran sur Sketch](/assets/Fonddecransketch.jpeg) *Fond d'écran sur Sketch*
+![Fond d'écran sous forme mobile](/assets/Fonddecran.jpeg) *Fond d'écran sous forme mobile*
 
 ### Après-midi:
 
-* Code:
+**Code:**
 
-On m'apprend les bases du Markdown: langage de code (Voir la partie "métier de développeur")
+On m'apprend les bases du Markdown: langage de code ([La syntaxe du Markdown](/src/metierdedeveloppeur))
 
-Syntaxe markdown: comment mettre des mots en italique, en gras, mettre des liens,… (Voir la partie "métier de développeur")
+J'apprends à me servir du Markdown, comment mettre des mots en italique, en gras, mettre des liens,… (Voir la partie "métier de développeur")
 
 On m'apprend aussi à utiliser Atom: logiciel de codage (Voir la partie "Les différentes applications utilisés")
 Début du projet de site: remplissage du site des méthodes apprises…
