--- a/src/articles/2022-03-18.md
+++ b/src/articles/2022-03-18.md
@@ -6,5 +6,35 @@ tags:
   - articles
 
 ---
-### Matin et Après-midi:
-Dernière ligne droite pour le site, finalisation du design (les couleurs à choisir, le contraste, la taille du texte,...)
+
+## Dernière ligne droite
+
+Le stage touche à sa fin, je fais les derniers ajustements sur le design, je prépare les fichiers de couleurs pour que Gaspard puisse m'aider avec le code CSS (pour la mise en page du site)
+
+![aya et almas](/assets/domivicvendredi.jpeg)
+
+Légende: *Domitille m'aide pour les derniers réglages du site*
+
+Les codes couleurs sont 6 chiffres et lettres précédés d'un `#`
+
+Par exemple pour ce site,
+* les couleurs du dégradé du bandeau sont `#032a68` (bleu foncé) et `#75c9c8` (bleu clair)
+* le texte est en `#333333` (gris)
+* les liens du menu à gauche sont `#0b80ef` (bleu)
+
+On choisit les couleurs pour que l'ensemble soit joli et lisible (s'il n'y a pas assez de contraste entre les couleurs, ça devient illisible).
+
+Les typographies sont "Open Sans" pour le texte et Rockwell pour les titres.
+Il faut choisir les tailles du texte pour que ça reste harmonieux et lisible, ainsi que l'espace entre les blocs et paragraphes.
+
+
+## co-working international
+
+Depuis quelques jours, il y a des collègues de gaspard qui nous ont rejoint à Courtainville. Ils sont Kazakh et travaillent en consultants indépendants comme Domitlle.
+
+
+![aya et almas](/assets/ayaalmas.jpg)
+
+Légende: *Aya et Almas en train de travailler*
+
+Vendredi ils se sont installés dans nos bureaux. Comme ils ne parlent qu'anglais ou russe, ça donne une ambiance internationale.
