--- a/src/articles/2022-03-14.md
+++ b/src/articles/2022-03-14.md
@@ -21,16 +21,19 @@ J'ai découvert des logiciels de deigne Sketch, Zeplin, Invision, Trello (Voir l
 
  J'apprends à utiliser Sketch ([Apprendre à utiliser Sketch](https://youtu.be/ilcwjXTqyNM)) et je fais ma première réalisation avec Sketch, c'est un fond d’écran.
 
-![Fond d'écran sur Sketch](/assets/Fonddecransketch.jpeg) *Fond d'écran sur Sketch*
-![Fond d'écran sous forme mobile](/assets/Fonddecran.jpeg) *Fond d'écran sous forme mobile*
+![Fond d'écran sur Sketch](/assets/fonddecransketch.jpeg)
+
+*Fond d'écran sur Sketch*
+![Fond d'écran sous forme mobile](/assets/fonddecran.jpeg)
+
+*Fond d'écran sous forme mobile*
 
 ### Après-midi:
 
 **Code:**
 
-On m'apprend les bases du Markdown: langage de code ([La syntaxe du Markdown](/src/metierdedeveloppeur))
+On m'apprend les bases du Markdown: J'apprends à me servir du Markdown, comment mettre des mots en italique, en gras, mettre des liens,… ([La syntaxe du Markdown](/metierdedeveloppeur))
 
-J'apprends à me servir du Markdown, comment mettre des mots en italique, en gras, mettre des liens,… (Voir la partie "métier de développeur")
+On m'apprend aussi à utiliser Atom: logiciel de codage ([Application Atom](/differentsapp))
 
-On m'apprend aussi à utiliser Atom: logiciel de codage (Voir la partie "Les différentes applications utilisés")
-Début du projet de site: remplissage du site des méthodes apprises…
+Début du projet du site: j'ai commencé à remplir le carnet de bord (je remplis le 14 mars) et les parties du rapport que je pouvais remplir.
