--- a/src/articles/2022-03-15.md
+++ b/src/articles/2022-03-15.md
@@ -1,7 +1,7 @@
 ---
 title: Mardi 15 mars
 description: Journal de bord
-date: 2022-03-14
+date: 2022-03-15
 layout: article.pug
 tags:
   - articles
@@ -9,32 +9,26 @@ tags:
 ---
 
 ### Matin:
-- Visioconférence sur l’essaie d’un prototype de site: c'est un crash-test d’utilisateurs,un crash-test d'utilisateurs est un test avant le test d'utilisateur pour tester l'interface créée et pour s'entrainer pour les vrais test pour l'UX researcher (User experience researcher en anglais) qui est la personne posant les questions au testeur et qui fait un rapport du test aux autres.
 
-![Crash-test](/assets/crashtest.jpeg) Photographie de moi-même regardant le crash-test.
+Visioconférence sur l’essaie d’un prototype de site: c'est un crash-test d’utilisateurs, un crash-test d'utilisateurs est un test avant le test d'utilisateur pour tester l'interface créée et pour s'entrainer pour les vrais test pour l'UX researcher (User experience researcher en anglais) qui est la personne posant les questions au testeur et qui fait un rapport du test aux autres.
 
-- Mais, Pourquoi on teste? Puisque avant que l'interface ne sorte on demande à quelques personnes de passer des testes pour savoir si l'applications est bien, pour ne pas que une fois l'application sortis il n'y ait de retours négatifs ce qui influence l'avis sur l'entreprise ayant créé l'interface.  
+![Crash-test](/assets/crashtest.jpeg)
 
-- Puis explications de ce que c'est un test utilisateur par un chef de projet  et les différentes étapes jusqu’à mettre l’application (pour le cas de ce crash-test) sur l’app store ou le play store vu par tout le monde.
+*Photographie de moi-même regardant le crash-test.*
+
+* Pourquoi on teste?
+
+Puisque avant que l'interface ne sorte on demande à quelques personnes de passer des testes pour savoir si l'applications est bien, pour ne pas que une fois l'application sortis il n'y ait de retours négatifs ce qui influence l'avis sur l'entreprise ayant créé l'interface.  
+
+Puis, un chef de projet de l'équipe designer m'expliquevce que c'est un test utilisateur et les différentes étapes avant de mettre l’application (pour le cas de ce crash-test) sur l’app store ou le play store qui pourra être vu par tout le monde.
 
 
 ### Après-midi:
 
-- Réunion de tous les designers (point UX/UI):
+Réunion de tous les designers (point UX/UI):
+Il y a différents rôles dans l'équipe designer: UI (User Interface), UX 5User experience), PO (chef de projet), Dev.
 
-* Les différents rôles de l'équipe designer:
-
-UX: (expliqué dans "Mercredi 16 Mars")
-
-UI: User Interface en anglais, réalise des maquettes en couleur d'après les wireframes des UX designer tout en s'assurant que la charte graphique est bien respectée. Il est amenée aussi à faire des illustrations et de la retouche photographique.
-
-La charte graphique est regroupe tout les codes de l'identité visuel de la marque c'est-à-dire logo, couleur, typographie, pictogramme, photo,...
-
-PO: Chef de Projet, c'est lui qui dirige le projet, il récolte le besoin et le donne sous forme de brief aux UX designer puis aux UI designer puis c'est lui qui fait le lien entre les développeurs et les UX/UI.
-
-Dev: Développeur, il code toute l'interface, par exemple un bouton qui à été créé sur la page d'accueil et qui mène sur une autre page, c'est lui qui va le codé pour que dès que le bouton est cliqué, il amène sur l'autre page.
-
-- Continuation du projet de site sur Sketch, apprendre à bien utiliser le logiciel.
+Continuation du projet du site sur Sketch, apprendre à bien utiliser le logiciel.
 
 
 
