--- a/src/articles/2022-03-17.md
+++ b/src/articles/2022-03-17.md
@@ -1,19 +1,21 @@
 ---
 title: Jeudi 17 Mars
-date: 2022-03-14
+date: 2022-03-17
 layout: article.pug
 tags:
   - articles
 
 ---
 ### Matin:
-- Finalisation du projet de site avec les logiciels Atom, Sketch,... et création d'un logo sur Sketch.
+Finalisation du projet du site avec les logiciels Atom, Sketch,... et création d'un logo sur Sketch.
 
 ![logosite](/assets/logosite.jpeg)
 
+*Logo créé pour le site*
+
 ### Après-midi:
-- Découverte de **Github** (description dans la partie "Les différents logiciels et applications utilisés").
-- Vidéo youtube proposée pour utiliser Github: [Utiliser Github](https://www.youtube.com/watch?v=V6Zo68uQPqE)
+Découverte de **Github** (description dans la partie "Les différents logiciels et applications utilisés").
+Vidéo youtube proposée pour utiliser Github: [Utiliser Github](https://www.youtube.com/watch?v=V6Zo68uQPqE)
 
 
 
