--- a/src/articles/2022-03-14.md
+++ b/src/articles/2022-03-14.md
@@ -13,7 +13,9 @@ tags:
 
 Daily: Le Daily est une réunion que pour les UI (User Interface en anglais), cette réunion en visioconférence commence la journée, elle sert à parler des différents projets à effectuer ou à avancer pendant la journée.
 
-![Daily](/assets/dailyui.jpeg) *Daily avec toute l'équipe UI*
+![Daily](/assets/dailyui.jpeg)
+
+*Daily avec toute l'équipe UI*
 
 Pour mon stage, on m'a proposer de faire mon rapport sous forme de site web: aujourd'hui, on m'explique en comment faire un site: il faut utilisés des logiciels fait pour cela, c'est-à-dire Sketch, Atom, GitHub,...
 
@@ -24,6 +26,7 @@ J'ai découvert des logiciels de deigne Sketch, Zeplin, Invision, Trello (Voir l
 ![Fond d'écran sur Sketch](/assets/fonddecransketch.jpeg)
 
 *Fond d'écran sur Sketch*
+
 ![Fond d'écran sous forme mobile](/assets/fonddecran.jpeg)
 
 *Fond d'écran sous forme mobile*
