--- a/src/articles/2022-03-18.md
+++ b/src/articles/2022-03-18.md
@@ -13,7 +13,7 @@ Le stage touche à sa fin, je fais les derniers ajustements sur le design, je pr
 
 ![aya et almas](/assets/domivicvendredi.jpeg)
 
-Légende: *Domitille m'aide pour les derniers réglages du site*
+*Domitille m'aide pour les derniers réglages du site*
 
 Les codes couleurs sont 6 chiffres et lettres précédés d'un `#`
 
@@ -35,6 +35,6 @@ Depuis quelques jours, il y a des collègues de gaspard qui nous ont rejoint à 
 
 ![aya et almas](/assets/ayaalmas.jpg)
 
-Légende: *Aya et Almas en train de travailler*
+*Aya et Almas en train de travailler*
 
 Vendredi ils se sont installés dans nos bureaux. Comme ils ne parlent qu'anglais ou russe, ça donne une ambiance internationale.
