--- a/src/articles/2022-03-17.md
+++ b/src/articles/2022-03-17.md
@@ -14,11 +14,9 @@ Finalisation du projet du site avec les logiciels Atom, Sketch,... et création 
 *Logo créé pour le site*
 
 ### Après-midi:
-Découverte de **Github** (description dans la partie "Les différents logiciels et applications utilisés").
-Vidéo youtube proposée pour utiliser Github: [Utiliser Github](https://www.youtube.com/watch?v=V6Zo68uQPqE)
+Découverte de **Github** (description dans la partie "[Les différents logiciels et applications utilisés](/differentsapp)").
 
-
-
+Tutoriel de formation à Git et Github: [Débuter avec Git et Github – par Le Wagon](https://www.youtube.com/watch?v=V6Zo68uQPqE)
 
 
 
