--- a/src/articles/2022-03-18.md
+++ b/src/articles/2022-03-18.md
@@ -28,9 +28,9 @@ Les typographies sont "Open Sans" pour le texte et Rockwell pour les titres.
 Il faut choisir les tailles du texte pour que ça reste harmonieux et lisible, ainsi que l'espace entre les blocs et paragraphes.
 
 
-## co-working international
+## Co-working international
 
-Depuis quelques jours, il y a des collègues de gaspard qui nous ont rejoint à Courtainville. Ils sont Kazakh et travaillent en consultants indépendants comme Domitlle.
+Depuis quelques jours, il y a des collègues de Gaspard qui nous ont rejoint à Courtainville. Ils sont Kazakh et travaillent en consultants indépendants comme Domitille.
 
 
 ![aya et almas](/assets/ayaalmas.jpg)
